--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -36,6 +36,7 @@
 
     <script src="/static/js/commons/jquery.min.js"></script>
     <script src="/static/js/commons/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://use.fontawesome.com/3e1a7eaa5a.js"></script>
 </body>
 
