--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -40,9 +40,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                Bạn có chắc muốn xóa người dùng này!!!
-            </div>
+            <div class="modal-body"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" id="delete-document">Cập nhật</button>
                 <button type="button" class="btn btn-primary" id="delete-user-close" data-dismiss="modal">Hủy</button>
