--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -20,7 +20,7 @@
         </div>
         <div class="users-detail my-3">
             <h2 class="users-detail--title">User detail title</h2>
-            <form id="users-detail--info">
+            <form id="users-detail">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
