--- a/src/resource/views/components/courses/unitDetail.hbs
+++ b/src/resource/views/components/courses/unitDetail.hbs
@@ -20,22 +20,23 @@
         </div>
         <div class="page-detail">
             <h2 class="page-detail--title">Thông tin khóa học</h2>
-            <form class="page-detail-form" id="course-detail--info">
+            <form class="page-detail-form" id="unit-detail">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
                             <label class="form-group--label" for="course-code">Mã khóa học</label>
                             <input type="text" class="form-control" id="course-code" disabled placeholder="Mã code">
+                            <span class="form-message"></span>
                         </div>
-
                         <div class="form-group">
                             <label class="form-group--label" for="unit-name">Tên Chương học</label>
                             <input type="text" class="form-control" id="unit-name">
+                            <span class="form-message"></span>
                         </div>
-
                         <div class="form-group">
                             <label class="form-group--label" for="unit-lesson">Số bài giảng hiện có</label>
                             <input type="text" class="form-control" id="unit-lesson" disabled>
+                            <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-6">
@@ -57,14 +58,19 @@
                         <div class="form-group">
                             <label class="form-group--label" for="unit-create-date">Ngày tạo</label>
                             <input type="datetime-local" step="0.001" class="form-control" id="unit-create-date">
+                            <span class="form-message"></span>
                         </div>
                         <div class="form-group">
                             <label class="form-group--label" for="unit-edit-last-date">Cập nhật gần đây</label>
                             <input type="datetime-local" step="0.001" class="form-control" id="unit-edit-last-date">
+                            <span class="form-message"></span>
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn-executed btn">Submit</button>
+                <div class="users-detail--serect">
+                    <button type="submit" class="btn-executed btn">Submit</button>
+                    <button type="button" id="go-back" class="btn">Quay lại</button>
+                </div>
             </form>
         </div>
     </div>
