--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -15,21 +15,19 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-4">
                 <h2 class="form--title text-center">Coder Udemy</h2>
-                <form class="login--form">
+                <form class="login--form" id="user-login">
                     <div class="form-group">
                         <label for="user_email">Tài khoản email</label>
-                        <input class="form-control" data-id="email-feedback" type="email" name="email" id="user_email"
-                            placeholder="Nhập email">
-                        <div class="invalid-feedback" id="email-feedback">Please choose a username.</div>
+                        <input class="form-control" type="email" id="user-email" placeholder="Nhập email">
+                        <span class="form-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="password">Mật khẩu</label>
-                        <input class="form-control" data-id="password-feedback" type="password" name="password"
-                            id="user_password" placeholder="Nhập mật khẩu">
-                        <div class="invalid-feedback" id="password-feedback">Please choose a username.</div>
+                        <input class="form-control" type="password" id="user-password" placeholder="Nhập mật khẩu">
+                        <span class="form-message"></span>
                     </div>
                     <div class="form-group">
-                        <button type="button" id="user_login" class="btn btn-primary w-100">Đăng nhập</button>
+                        <button type="submit" id="user_login" class="btn btn-primary w-100">Đăng nhập</button>
                     </div>
                 </form>
             </div>
