#Commit 04/04/2022: Add validation all page detail

--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -120,6 +120,9 @@
             .back-page-unit {
                 cursor: pointer;
             }
+            .go-back {
+                cursor: pointer;
+            }
         }
     }
 }
