--- a/src/resource/views/components/courses/unitDetail.hbs
+++ b/src/resource/views/components/courses/unitDetail.hbs
@@ -69,7 +69,7 @@
                 </div>
                 <div class="users-detail--serect">
                     <button type="submit" class="btn-executed btn">Submit</button>
-                    <button type="button" id="go-back" class="btn">Quay lại</button>
+                    <button type="button" id="come-back" class="btn">Quay lại</button>
                 </div>
             </form>
         </div>
