--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -91,6 +91,8 @@
         margin: 0px 3px; }
       .breadcrumd ul li .back-page-unit {
         cursor: pointer; }
+      .breadcrumd ul li .go-back {
+        cursor: pointer; }
 
 .invalid-feedback.active {
   display: block; }
