--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,14 +1,26 @@
 .login-wrapper {
+  background-color: #f9fbfa;
   height: 100vh; }
-
-.login-wrapper .row {
-  height: 100vh; }
-
-.login-wrapper .row .form--title {
-  margin-bottom: 20px;
-  text-transform: uppercase; }
-
-.login-wrapper .row .login--form {
-  display: block; }
+  .login-wrapper .row {
+    height: 100vh; }
+    .login-wrapper .row .wrapper-component {
+      background-color: white;
+      border-radius: 5px;
+      box-shadow: 0 0 2px #00000030;
+      padding: 35px 20px 15px 20px; }
+      .login-wrapper .row .wrapper-component .form--title {
+        font-size: 25px;
+        font-weight: 700;
+        margin-bottom: 20px;
+        text-transform: uppercase; }
+      .login-wrapper .row .wrapper-component .login--form {
+        display: block; }
+        .login-wrapper .row .wrapper-component .login--form button {
+          background-color: #f28d0f;
+          color: #ffffff;
+          font-size: 18px;
+          padding: 8px 10px;
+          margin-top: 20px;
+          text-transform: capitalize; }
 
 /*# sourceMappingURL=../../../false/login.css.map */
