--- a/src/resource/scss/login.scss
+++ b/src/resource/scss/login.scss
@@ -1,13 +1,32 @@
+@import "_variables.scss";
+
 .login-wrapper {
+    background-color: rgb(249, 251, 250);
     height: 100vh;
     .row {
         height: 100vh;
+        .wrapper-component{
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 2px #00000030;
+            padding: 35px 20px 15px 20px;
         .form--title {
+            font-size: 25px;
+            font-weight: 700;
             margin-bottom: 20px;
             text-transform: uppercase;
         }
         .login--form {
             display: block;
+            button {
+                background-color: $button-color;
+                color: #ffffff;
+                font-size: 18px;
+                padding: 8px 10px;
+                margin-top: 20px;
+                text-transform: capitalize;
+            }
         }
+    }
     }
 }
