--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -14,22 +14,25 @@
     <div class="login-wrapper">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-4">
-                <h2 class="form--title text-center">Coder Udemy</h2>
-                <form class="login--form" id="user-login">
-                    <div class="form-group">
-                        <label for="user_email">Tài khoản email</label>
-                        <input class="form-control" type="email" id="user-email" placeholder="Nhập email">
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Mật khẩu</label>
-                        <input class="form-control" type="password" id="user-password" placeholder="Nhập mật khẩu">
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" id="user_login" class="btn btn-primary w-100">Đăng nhập</button>
-                    </div>
-                </form>
+                <div class="wrapper-component">
+                    <h2 class="form--title text-center">Coder Udemy</h2>
+                    <form class="login--form" id="user-login">
+                        <div class="form-group">
+                            <label for="user_email">Email đăng nhập</label>
+                            <input class="form-control" type="email" id="user-email" placeholder="VD: Email@gmail.com">
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Mật khẩu</label>
+                            <input class="form-control" type="password" id="user-password"
+                                placeholder="Mật khẩu người dùng">
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn w-100">Đăng nhập</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
