--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -84,7 +84,7 @@
                 </div>
                 <div class="users-detail--serect">
                     <button type="submit" class="btn users-detail--btn">Submit</button>
-                    <button type="button" id="go-back" class="btn">Quay lại</button>
+                    <button type="button" id="come-back" class="btn">Quay lại</button>
                 </div>
             </form>
         </div>
