#Commit 04/04/2022: Refactor authentication course page - method new course

--- a/src/resource/views/components/courses/courseDetail.hbs
+++ b/src/resource/views/components/courses/courseDetail.hbs
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-group--label" for="course-lesson">Số bài giảng hiện có</label>
-                            <input type="text" class="form-control" id="course-lesson" disabled
+                            <input type="text" class="form-control" id="course-unit" disabled
                                 aria-describedby="emailHelp">
                             <span class="form-message"></span>
                         </div>
