--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -94,9 +94,6 @@
       .breadcrumd ul li .go-back {
         cursor: pointer; }
 
-.invalid-feedback.active {
-  display: block; }
-
 .page-main {
   box-shadow: 0 0 2px #00000030;
   margin: 15px 0px;
@@ -188,12 +185,12 @@
   position: fixed;
   padding: 5px 10px;
   min-width: 150px;
-  z-index: 100;
-  animation: showToasts 2.5s ease forwards;
-  transition: all .5s ease; }
-  .modal-toasts .toasts-content {
+  z-index: 2000;
+  animation: showToasts 1.1s ease forwards;
+  transition: all .2s ease; }
+  .modal-toasts .content {
     color: #ffffff;
-    font-size: 13px;
+    font-size: 14px;
     margin-bottom: 0px;
     text-transform: capitalize; }
 
