--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -127,11 +127,6 @@
     }
 }
 
-// FORM
-.invalid-feedback.active {
-    display: block;
-}
-
 // PAGE MAIN
 .page-main {
     box-shadow: 0 0 2px #00000030;
@@ -256,7 +251,6 @@
 // TOASTS
 .modal-toasts {
     background-color: #031b3d;
-    // display: flex;
     display: none;
     align-items: center;
     justify-content: center;
@@ -266,12 +260,12 @@
     position: fixed;
     padding: 5px 10px;
     min-width: 150px;
-    z-index: 100;
-    animation: showToasts 2.5s ease forwards;
-    transition: all .5s ease;
-    .toasts-content {
+    z-index: 2000;
+    animation: showToasts 1.1s ease forwards;
+    transition: all .2s ease;
+    .content {
         color: #ffffff;
-        font-size: 13px;
+        font-size: 14px;
         margin-bottom: 0px;
         text-transform: capitalize;
     }
