#Commit 10/04/2022: Add api client register and signout

--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -25,34 +25,32 @@
                     <div class="col-6">
                         <div class="form-group">
                             <label class="title--input" for="user-name">Tên người dùng</label>
-                            <input type="text" class="form-control" id="user-name" placeholder="Họ và tên"
-                                value="{{user.user_name}}">
+                            <input type="text" class="form-control" id="user-name" placeholder="Họ và tên">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
                             <label class="title--input" for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Địa chỉ email"
-                                value="{{user.email}}">
+                            <input type="email" class="form-control" id="email" placeholder="Địa chỉ email">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
                             <label class="title--input" for="password">Mật khẩu</label>
-                            <input type="password" class="form-control" id="password" placeholder="Mật khẩu"
-                                value="{{user.password}}">
+                            <input type="password" class="form-control" id="password" placeholder="Mật khẩu">
                             <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="title--input" for="age">Tuổi</label>
-                            <input type="date" class="form-control" id="age" placeholder="Tuổi" value="{{user.age}}">
+                            <label class="title--input" for="dateOfBirth">Tuổi</label>
+                            <input type="date" class="form-control" id="dateOfBirth" placeholder="Tuổi">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
                             <label class="title--input" for="user-role">Loại tài khoản</label>
                             <select class="custom-select" id="user-role">
                                 <option selected value="default">Chọn loại tài khoản</option>
-                                <option value="user">khách hàng</option>
+                                <option value="user">Khách hàng</option>
+                                <option value="member">Học viên</option>
                                 <option value="admin">Quản trị</option>
                             </select>
                             <span class="form-message"></span>
