--- a/src/resource/views/components/site/home.hbs
+++ b/src/resource/views/components/site/home.hbs
@@ -56,7 +56,17 @@
                             <img class="img-fluid component-items--thumbnail" src="/static/img/user.jpg" alt="">
                             <div class="component-items--content">
                                 <h2 class="content-title">Quản trị Người dùng</h2>
-                                <p class="content-description">Quản trị người dùng cập nhật thông tin người dùng cung
+                                <p class="content-description">Quản trị Người dùng cập nhật thông tin người dùng cung
+                                    cấp dịch vụ tốt nhất cho bạn</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-4">
+                        <a href="/clients" class="component-items d-block">
+                            <img class="img-fluid component-items--thumbnail" src="/static/img/client.jpg" alt="">
+                            <div class="component-items--content">
+                                <h2 class="content-title">Quản trị học viên</h2>
+                                <p class="content-description">Quản trị Học viên cập nhật thông tin người dùng cung
                                     cấp dịch vụ tốt nhất cho bạn</p>
                             </div>
                         </a>
