#Commit 29/04/2022: Add API Update client - show information Client.

--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -19,7 +19,7 @@
         </div>
         <div class="page-detail">
             <h2 class="page-detail--title">Thông tin khóa học</h2>
-            <form class="page-detail-form" id="course-detail">
+            <form class="page-detail-form" id="Client">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
@@ -85,18 +85,21 @@
                         <div class="form-group register-course">
                             <label class="form-group--label" for="Address">Khóa học đã đăng ký</label>
                             <div class="course-content">
-                                <div class="course-content--items">
+                                <div class="course-content--items__blank">
+                                    <p>Học viên chưa đăng ký khóa học</p>
+                                </div>
+                                {{!-- <div class="course-content--items">
                                     <p class="course-content--items_name">Khóa học 1</p>
                                     <button type="button" class="course-content--items_unRegister">
                                         <i class="fa fa-times-circle-o" aria-hidden="true"></i>
                                     </button>
-                                </div>
-                                <div class="course-content--items">
+                                </div> --}}
+                                {{!-- <div class="course-content--items">
                                     <p class="course-content--items_name">Khóa học 2</p>
                                     <button type="button" class="course-content--items_unRegister">
                                         <i class="fa fa-times-circle-o" aria-hidden="true"></i>
                                     </button>
-                                </div>
+                                </div> --}}
                             </div>
                         </div>
                     </div>
