--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -42,7 +42,10 @@
 
                         <div class="form-group">
                             <label class="form-group--label" for="Password">Mật khẩu</label>
-                            <input type="password" class="form-control" id="Password">
+                            <div class="password-control">
+                                <input type="password" class="form-control" id="Password">
+                                <i class="fa fa-eye toggle-pasword" id="toggle-pasword" aria-hidden="true"></i>
+                            </div>
                             <span class="form-message"></span>
                         </div>
 
@@ -84,22 +87,19 @@
 
                         <div class="form-group register-course">
                             <label class="form-group--label" for="Address">Khóa học đã đăng ký</label>
-                            <div class="course-content">
-                                <div class="course-content--items__blank">
-                                    <p>Học viên chưa đăng ký khóa học</p>
-                                </div>
-                                {{!-- <div class="course-content--items">
+                            <div class="course-content" id="course-content">
+                                <div class="course-content--items">
                                     <p class="course-content--items_name">Khóa học 1</p>
                                     <button type="button" class="course-content--items_unRegister">
                                         <i class="fa fa-times-circle-o" aria-hidden="true"></i>
                                     </button>
-                                </div> --}}
-                                {{!-- <div class="course-content--items">
+                                </div>
+                                <div class="course-content--items">
                                     <p class="course-content--items_name">Khóa học 2</p>
                                     <button type="button" class="course-content--items_unRegister">
                                         <i class="fa fa-times-circle-o" aria-hidden="true"></i>
                                     </button>
-                                </div> --}}
+                                </div>
                             </div>
                         </div>
                     </div>
