#Commit 03/05/2022: Add API upload thumbnail.

--- a/src/resource/views/components/clients/client.hbs
+++ b/src/resource/views/components/clients/client.hbs
@@ -37,7 +37,11 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination d-flex align-items-center justify-content-center"></ul>
     </nav>
-
+    
+    <form id="test">
+        <input type="file" id="thumbnail">
+        <button type="submit">Send</button>
+    </form>
     <script type="module" src="/static/js/client/client.js"></script>
 </body>
 
