--- a/src/resource/views/components/clients/client.hbs
+++ b/src/resource/views/components/clients/client.hbs
@@ -38,10 +38,13 @@
         <ul class="pagination d-flex align-items-center justify-content-center"></ul>
     </nav>
     
-    <form id="test">
+    {{!-- <form id="test">
         <input type="file" id="thumbnail">
         <button type="submit">Send</button>
     </form>
+
+    <button type="button" id="unlink">unlink file</button> --}}
+
     <script type="module" src="/static/js/client/client.js"></script>
 </body>
 
