#Commit 04/05/2022: Add process upload file to server.

--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -20,9 +20,9 @@
         <div class="page-detail">
             <div class="page-detail--information">
                 <h2 class="page-detail--title">Thông tin khóa học</h2>
-                <div class="thumbnail-priture">
-                    <img class="priture" src="/static/img/thumbnail_default.jpg" alt="thmbnail"/>
-                    <input type="file" class="client-thumbnail" id="client-thumbnail"/>
+                <div class="thumbnail-priture" id="thumbnail-priture">
+                    <img class="priture" id="priture" src="/static/img/thumbnail_default.jpg" alt="thmbnail"/>
+                    <input type="file" class="client-thumbnail" id="client-upload"/>
                 </div>
             </div>
 
