--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12">
+                    {{!-- <div class="col-12">
                         <div class="form-group register-course">
                             <label class="form-group--label" for="Address">Khóa học đã đăng ký</label>
                             <div class="course-content" id="course-content">
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> --}}
                     
                 </div>
 
