--- a/src/resource/views/components/clients/clientDetail.hbs
+++ b/src/resource/views/components/clients/clientDetail.hbs
@@ -19,10 +19,11 @@
         </div>
         <div class="page-detail">
             <div class="page-detail--information">
+                <div class="page-detail--roll-back"><i class="fa fa-angle-double-left" aria-hidden="true"></i></div>
                 <h2 class="page-detail--title">Thông tin khóa học</h2>
-                <div class="thumbnail-priture" id="thumbnail-priture">
-                    <img class="priture" id="priture" src="/static/img/thumbnail_default.jpg" alt="thmbnail"/>
-                    <input type="file" class="client-thumbnail" id="client-upload"/>
+                <div class="thumbnail-priture" id="wrapper-priture">
+                    <img class="priture" id="image-priture" src="/static/img/thumbnail_default.jpg" alt="thmbnail"/>
+                    <input type="file" class="client-thumbnail" id="upload-priture"/>
                 </div>
             </div>
 
@@ -85,34 +86,46 @@
                             <span class="form-message"></span>
                         </div>
                     </div>
-
-                    {{!-- <div class="col-12">
-                        <div class="form-group register-course">
-                            <label class="form-group--label" for="Address">Khóa học đã đăng ký</label>
-                            <div class="course-content" id="course-content">
-                                <div class="course-content--items">
-                                    <p class="course-content--items_name">Khóa học 1</p>
-                                    <button type="button" class="course-content--items_unRegister">
-                                        <i class="fa fa-times-circle-o" aria-hidden="true"></i>
-                                    </button>
-                                </div>
-                                <div class="course-content--items">
-                                    <p class="course-content--items_name">Khóa học 2</p>
-                                    <button type="button" class="course-content--items_unRegister">
-                                        <i class="fa fa-times-circle-o" aria-hidden="true"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div> --}}
-                    
                 </div>
-
-                <div class="users-detail--serect">
-                    <button type="submit" class="btn-executed btn">Submit</button>
-                    <button type="button" id="come-back" class="btn">Quay lại</button>
-                </div>
+                <div class="users-detail--serect btn-executed btn"><button type="submit">Submit</button></div>
             </form>
+        </div>
+
+        <div class="page-detail mb-5 mt-4">
+            <div class="page-detail--information">
+                <h2 class="page-detail--title">Khóa học đăng ký</h2>
+            </div>
+            <div class="course-infor">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label class="form-group--label" for="Gender">Khóa học</label>
+                            <select class="custom-select" id="Gender">
+                                <option selected value="default">Chọn khóa học đăng ký</option>
+                                <option value="01">khóa học 01</option>
+                                <option value="02">khóa học 02</option>
+                                <option value="03">khoa học 03</option>
+                            </select>
+                            <span class="form-message"></span>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <label class="form-group--label" for="Gender">Chức năng</label>
+                        <div class="form-group">
+                            <button type="button" class="btn-executed btn">Thêm khóa học</button>
+                            <button type="button" class="btn-executed btn">Xóa khóa học</button>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div>
+                            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                            <label class="form-group--label" for="Gender">Các khóa đã đăng ký</label>
+                        </div>
+                        <div class="page-detail--course-register"></div>
+                    </div>
+                </div>
+                <div class="mt-4"><button type="submit" class="btn-executed btn">Cập nhật</button></div>
+            </div>
         </div>
     </div>
 
